# Ducky

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_installer.ps1  ducky.spec  install.bat  installer.iss  main.py  pyproject.toml  requirements.txt  setup.bat  uninstall.bat
ducky_app/core/: config_manager.py  session_manager.py  workers.py
ducky_app/ui/: dialogs.py  main_window.py  themes.py  widgets.py
ducky_app/utils/: helpers.py
src/ducky_app/: main.py
src/ducky_app/core/: config_manager.py  session_manager.py  workers.py
src/ducky_app/ui/: dialogs.py  icons.py  main_window.py  themes.py  widgets.py
src/ducky_app/utils/: helpers.py
