[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ducky-network-tool"
version = "1.3.0"
authors = [
  { name="Your Name", email="youremail@example.com" },
]
description = "An all-in-one toolkit for network engineers and security enthusiasts."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PySide6==6.6.0",
    "pyserial==3.5",
    "psutil==5.9.5",
    "scapy==2.5.0",
    "requests==2.31.0",
    "zxcvbn==4.4.28",
    "paramiko==3.3.1",
    "telnetlib3==2.0.1",
    "pysnmp==4.4.12"
]

[project.scripts]
ducky = "ducky_app.main:run"

[project.urls]
Homepage = "https://github.com/thecmdguy/Ducky"

[tool.setuptools]
packages = ["ducky_app"]
package-dir = {"" = "src"}
